fix spinner alignment

--- a/src/app/missions/missions.component.css
+++ b/src/app/missions/missions.component.css
@@ -48,6 +48,7 @@
     height: 80px;
     -webkit-animation: spin 2s linear infinite; /* Safari */
     animation: spin 2s linear infinite;
+    margin: auto;
   }
   
   /* Safari */
